--- a/index.html
+++ b/index.html
@@ -119,28 +119,28 @@
               <p class="team-qualified">Product Designer</p>
               <ul class="list social-list">
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -156,28 +156,28 @@
               <p class="team-qualified">Frontend Developer</p>
               <ul class="list social-list">
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -193,28 +193,28 @@
               <p class="team-qualified">Marketing</p>
               <ul class="list social-list">
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -230,21 +230,21 @@
               <p class="team-qualified">UI Designer</p>
               <ul class="list social-list">
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="" class="team-social-link">
+                  <a href="./index.html" class="team-social-link">
                     <svg class="team-social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
@@ -268,28 +268,28 @@
         <h2 class="customers-title">Customers</h2>
         <ul class="list customers-list">
           <li class="customers-box">
-            <a href="" class="customers-link">
+            <a href="./index.html" class="customers-link">
             <svg class="customers-icons" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-1"></use>
             </svg>
             </a>
           </li>
           <li class="customers-box">
-            <a href="" class="customers-link">
+            <a href="./index.html" class="customers-link">
             <svg class="customers-icons" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-2"></use>
             </svg>
             </a>
           </li>
           <li class="customers-box">
-            <a href="" class="customers-link">
+            <a href="./index.html" class="customers-link">
             <svg class="customers-icons" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-3"></use>
             </svg>
             </a>
           </li>
           <li class="customers-box">
-            <a href="" class="customers-link">
+            <a href="./index.html" class="customers-link">
             <svg class="customers-icons" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-4"></use>
             </svg>
@@ -297,14 +297,14 @@
           </li>
           </li>
           <li class="customers-box">
-            <a href="" class="customers-link">
+            <a href="./index.html" class="customers-link">
             <svg class="customers-icons" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-5"></use>
             </svg>
             </a>
           </li>
           <li class="customers-box">
-            <a href="" class="customers-link">
+            <a href="./index.html" class="customers-link">
             <svg class="customers-icons" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-6"></use>
             </svg>
@@ -329,28 +329,28 @@
         <h2 class="media-text">Social media</h2>
         <ul class="list footer-social-list">
           <li class="footer-social-item">
-            <a href="" class="footer-social-link">
+            <a href="./index.html" class="footer-social-link">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
-            <a href="" class="footer-social-link">
+            <a href="./index.html" class="footer-social-link">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
-            <a href="" class="footer-social-link">
+            <a href="./index.html" class="footer-social-link">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
-            <a href="" class="footer-social-link">
+            <a href="./index.html" class="footer-social-link">
               <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
