--- a/portfolio.html
+++ b/portfolio.html
@@ -52,63 +52,98 @@
             </ul>
             <ul class="list hero-portfolio-cont">
                 <li class="portfolio-list-items">
-                    <img class="portfolio-img" src="./images/imgportf1.jpg" alt="BankAApp" width="360">
+                    <div class="portfolio-top-wrap">
+                        <img class="portfolio-img" src="./images/imgportf1.jpg" alt="BankAApp" width="360">
+                    <p class="portfolio-top-text">Loremipsum dolor
+                        sit, amet consectetadipisicing elit. Porro
+                        susdolores aliquam explicabo quam aut
+                        odio quaerat rerum voluptaassumenda fuga ipsum
+                        voluptacommodi veniam incidunt ut?
+                        Voluvoluptatibus atque.</p>
+                    </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Banking App Interface Concept</h2>
                         <p class="text-port">App</p>
+                        
                     </div>
                 </li>
                 <li class="portfolio-list-items">
+                    <div class="portfolio-top-wrap">
                     <img class="portfolio-img" src="./images/imgportf2.jpg" alt="QRCODE" width="360">
+                    <p class="portfolio-top-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et nisi eligendi, libero quos cum quas neque illo magnam? Harum temporibus sequi corporis facilis tenetur quas magni officia commodi repellendus ullam.</p>
+                    </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Cashless Payment</h2>
                         <p class="text-port">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-list-items">
+                    <div class="portfolio-top-wrap">
                     <img class="portfolio-img" src="./images/imgportf3.jpg" alt="MeditaionApp" width="360">
+                    <p class="portfolio-top-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et nisi eligendi, libero quos cum quas neque illo magnam? Harum temporibus sequi corporis facilis tenetur quas magni officia commodi repellendus ullam.</p>
+                    </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Meditaion App</h2>
                         <p class="text-port">App</p>
                     </div>
                 </li>
                 <li class="portfolio-list-items">
+                    <div class="portfolio-top-wrap">
                     <img class="portfolio-img" src="./images/imgportf4.jpg" alt="TaxiService" width="360">
+                    <p class="portfolio-top-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et nisi eligendi, libero quos cum quas neque illo magnam? Harum temporibus sequi corporis facilis tenetur quas magni officia commodi repellendus ullam.</p>
+                    </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Taxi Service</h2>
                         <p class="text-port">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-list-items">
+                    <div class="portfolio-top-wrap">
                     <img class="portfolio-img" src="./images/imgportf5.jpg" alt="ScreenIllustrations" width="360">
+                    <p class="portfolio-top-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et nisi eligendi, libero quos cum quas neque illo magnam? Harum temporibus sequi corporis facilis tenetur quas magni officia commodi repellendus ullam.</p>
+                    </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Screen Illustrations</h2>
                         <p class="text-port">Design</p>
                     </div>
                 </li>
                 <li class="portfolio-list-items">
+                    <div class="portfolio-top-wrap">
                     <img class="portfolio-img" src="./images/imgportf6.jpg" alt="OnlineCourses" width="360">
+                    <p class="portfolio-top-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et nisi eligendi, libero quos cum quas neque illo magnam? Harum temporibus sequi corporis facilis tenetur quas magni officia commodi repellendus ullam.</p>
+                    </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Online Courses</h2>
                         <p class="text-port">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-list-items">
+                    <div class="portfolio-top-wrap">
                     <img class="portfolio-img" src="./images/imgportf7.jpg" alt="StoriesConcept" width="360">
+                    <p class="portfolio-top-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et nisi eligendi, libero quos cum quas neque illo magnam? Harum temporibus sequi corporis facilis tenetur quas magni officia commodi repellendus ullam.</p>
+                    </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Instagram Stories Concept</h2>
                         <p class="text-port">Design</p>
                     </div>
                 </li>
-                <li class="portfolio-list-items"><img class="portfolio-img" src="./images/imgportf8.jpg"
+                <li class="portfolio-list-items">
+                    <div class="portfolio-top-wrap">
+                    <img class="portfolio-img" src="./images/imgportf8.jpg"
                         alt="OrganicFood" width="360">
+                        <p class="portfolio-top-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et nisi eligendi, libero quos cum quas neque illo magnam? Harum temporibus sequi corporis facilis tenetur quas magni officia commodi repellendus ullam.</p>
+                        </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Organic Food</h2>
                         <p class="text-port">Web Site</p>
                     </div>
                 </li>
-                <li class="portfolio-list-items"><img class="portfolio-img" src="./images/imgportf9.jpg"
+                <li class="portfolio-list-items">
+                    <div class="portfolio-top-wrap">
+                    <img class="portfolio-img" src="./images/imgportf9.jpg"
                         alt="FreshCoffee" width="360">
+                    <p class="portfolio-top-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et nisi eligendi, libero quos cum quas neque ill magnam Harum temporibus sequi corporis facilis tenetur quas magni officia commodi rep ellendus ullam.</p>
+                    </div>
                     <div class="list-items-text-cont">
                         <h2 class="text-20-500">Fresh Coffee</h2>
                         <p class="text-port">Web Site</p>
