--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="navigation">
         <a class="logo" href="./index.html" target="_blank"><span class="logo-part">Web</span>Studio</a>
         <ul class="list list-container">
-          <li class="logo-items"><a class="logo-link" href="./index.html">Studio</a></li>
+          <li class="logo-items curent"><a class="logo-link" href="./index.html">Studio</a></li>
           <li class="logo-items"><a class="logo-link" href="portfolio.html">Portfolio</a></li>
           <li class="logo-items"><a class="logo-link" href="#">Contacts</a></li>
         </ul>
@@ -40,7 +40,7 @@
     <section class="hero">
       <div class="hero-container container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-bnt hero-bnt-cont">Order Service</button>
+        <button type="button" data-modal-open class="hero-bnt hero-bnt-cont ">Order Service</button>
       </div>
     </section>
     <section class="feature">
@@ -49,9 +49,9 @@
         <ul class="list feature-cont">
           <li class="feature-items">
             <div class="feature-box">
-            <svg class="feature-icons feature-icons-cont" width="60" height="64">
-              <use href="./images/icons.svg#icon-antenna"></use>
-            </svg>
+              <svg class="feature-icons feature-icons-cont" width="60" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
             </div>
             <h3 class="text-20-500 feature-item-cont">Strategy</h3>
             <p class="feature-text">
@@ -61,9 +61,9 @@
           </li>
           <li class="feature-items">
             <div class="feature-box">
-            <svg class="feature-icons feature-icons-cont" width="60" height="64">
-              <use href="./images/icons.svg#icon-clock"></use>
-            </svg>
+              <svg class="feature-icons feature-icons-cont" width="60" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
             </div>
             <h3 class="text-20-500 feature-item-cont">Punctuality</h3>
             <p class="feature-text">
@@ -73,9 +73,9 @@
           </li>
           <li class="feature-items">
             <div class="feature-box">
-            <svg class="feature-icons feature-icons-cont" width="60" height="64">
-              <use href="./images/icons.svg#icon-diagram"></use>
-            </svg>
+              <svg class="feature-icons feature-icons-cont" width="60" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
             </div>
             <h3 class="text-20-500 feature-item-cont">Diligence</h3>
             <p class="feature-text">
@@ -85,9 +85,9 @@
           </li>
           <li class="feature-items">
             <div class="feature-box">
-            <svg class="feature-icons feature-icons-cont" width="60" height="64">
-              <use href="./images/icons.svg#icon-astronaut"></use>
-            </svg>
+              <svg class="feature-icons feature-icons-cont" width="60" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
             </div>
             <h3 class="text-20-500 feature-item-cont">Technologies</h3>
             <p class="feature-text">
@@ -269,50 +269,50 @@
         <ul class="list customers-list">
           <li class="customers-box">
             <a href="./index.html" class="customers-link">
-            <svg class="customers-icons" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-1"></use>
-            </svg>
+              <svg class="customers-icons" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-1"></use>
+              </svg>
             </a>
           </li>
           <li class="customers-box">
             <a href="./index.html" class="customers-link">
-            <svg class="customers-icons" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-2"></use>
-            </svg>
+              <svg class="customers-icons" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-2"></use>
+              </svg>
             </a>
           </li>
           <li class="customers-box">
             <a href="./index.html" class="customers-link">
-            <svg class="customers-icons" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-3"></use>
-            </svg>
+              <svg class="customers-icons" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-3"></use>
+              </svg>
             </a>
           </li>
           <li class="customers-box">
             <a href="./index.html" class="customers-link">
-            <svg class="customers-icons" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-4"></use>
-            </svg>
+              <svg class="customers-icons" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-4"></use>
+              </svg>
             </a>
           </li>
           </li>
           <li class="customers-box">
             <a href="./index.html" class="customers-link">
-            <svg class="customers-icons" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-5"></use>
-            </svg>
+              <svg class="customers-icons" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-5"></use>
+              </svg>
             </a>
           </li>
           <li class="customers-box">
             <a href="./index.html" class="customers-link">
-            <svg class="customers-icons" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-6"></use>
-            </svg>
+              <svg class="customers-icons" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-6"></use>
+              </svg>
             </a>
           </li>
         </ul>
       </div>
-      
+
     </section>
   </main>
 
@@ -358,9 +358,19 @@
           </li>
         </ul>
       </div>
-
     </div>
   </footer>
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+      <button type="button" data-modal-close class="modal-close">
+        <a href="#" class="modal-close-cross">
+          <svg class="modal-icon-cross" width="8" height="8">
+            <use href="./images/icons.svg#icon-cross-1"></use>
+          </svg>
+      </button>
+    </div>
+  </div>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
