--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <a class="logo" href="./index.html" target="_blank"><span class="logo-part">Web</span>Studio</a>
                 <ul class="list list-container">
                     <li class="logo-items"><a class="logo-link" href="./index.html">Studio</a></li>
-                    <li class="logo-items"><a class="logo-link" href="portfolio.html">Portfolio</a></li>
+                    <li class="logo-items curent"><a class="logo-link" href="portfolio.html">Portfolio</a></li>
                     <li class="logo-items"><a class="logo-link" href="#">Contacts</a></li>
                 </ul>
             </nav>
