--- a/index.html
+++ b/index.html
@@ -295,7 +295,6 @@
               </svg>
             </a>
           </li>
-          </li>
           <li class="customers-box">
             <a href="./index.html" class="customers-link">
               <svg class="customers-icons" width="104" height="56">
@@ -366,11 +365,9 @@
         <a href="#" class="modal-close-cross">
           <svg class="modal-icon-cross" width="8" height="8">
             <use href="./images/icons.svg#icon-cross-1"></use>
-          </svg>
-      </button>
+          </svg></button>
     </div>
   </div>
   <script src="./js/modal.js"></script>
 </body>
-
 </html>
