--- a/index.html
+++ b/index.html
@@ -357,8 +357,20 @@
           </li>
         </ul>
       </div>
-    </div>
+      <div class="footer-sub">
+        <p class="media-text sub-text">Subscribe</p>
+        <div class="footer-sub-menu">
+          <input type="email" name="email-input" placeholder="E-mail" class="footer-input">
+          <button type="button" class="footer-btn">Subscribe
+            <svg class="footer-btn-icon" width="24" height="20">
+              <use href="./images/icons.svg#icon-icon-send-1">
+              </use>
+            </svg>
+          </button>
+        </div>
+      </div>
   </footer>
+
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" data-modal-close class="modal-close">
@@ -370,4 +382,5 @@
   </div>
   <script src="./js/modal.js"></script>
 </body>
+
 </html>
